--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "test": "vitest",
+    "test": "vitest --run",
+    "coverage": "vitest run --coverage",
     "lint": "tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.1.0",
     "axios-mock-adapter": "^1.22.0",
+    "husky": "^8.0.3",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
